# l2_subset

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac  formula.py  gdb_cmd.txt  l2_subset.c  l2_subset.pseudocode  requirements.txt  run-paralle.sh  run-single.slurm  run.sh  run_matrix_config.py
reproduction/: .gitignore  dem_disc.c  l2_subset  l2_subset.c  l2_subset.h  large_points.txt  run.sh
src/: TA_common.c  TA_common.h  TA_shrink_bardelta.c  TA_shrink_delta.c  code_snippet_FC.py  dem_disc.c  dem_disc.h  dem_disc_main.c  dem_dist.c  filter_point.py  formula.py  gen_points.c  l2_subset.c  l2_subset.h  l2_subset_compile_matrix.c  l2_subset_from_compiled_matrix.c  l2_subset_from_compiled_matrix_w_starting_point.c  l2_subset_independent.c  linf_dist_brute.py  perturb.py  perturbe.py  plot.py  read_matrix.c  restart.py  shift_v2_nobrute.c  test.py  util.py  utils.c  utils.h  utils.py
stub/: sbatch
tools/: sigtest.py
